# gkr-basics

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  bootstrap.cmd  bootstrap.sh  gkr.natvis  vcpkg-configuration.json
consumers/: CMakeLists.txt  androidLogConsumer.cpp  androidLogConsumer.h  consoleConsumer.cpp  consoleConsumer.h  udpMessagePacket.h  udpSocketConsumer.cpp  udpSocketConsumer.h  windowsDebuggerConsumer.cpp  windowsDebuggerConsumer.h
examples/: CMakeLists.txt  androidLogConsumer.cpp  androidLogConsumer.h  appConsoleConsumer.cpp  appConsoleConsumer.h  consoleConsumer.cpp  consoleConsumer.h  udpMessagePacket.h  udpSocketConsumer.cpp  udpSocketConsumer.h  udpSocketReceiver.cpp  udpSocketReceiver.h  windowsDebuggerConsumer.cpp  windowsDebuggerConsumer.h
libs/gkr_comm/: CMakeLists.txt
libs/gkr_comm/gkr/comm/: api.h  tcp_socket_connection.cpp  tcp_socket_connection.hpp  tcp_socket_listener.cpp  tcp_socket_listener.hpp  udpSocketReceiver.cpp  udpSocketReceiver.h  udp_socket_receiver.cpp  udp_socket_receiver.hpp  udp_socket_sender.cpp  udp_socket_sender.hpp
libs/gkr_core/: CMakeLists.txt  README.md
libs/gkr_core/gkr/: api.h  api.hpp  defs.cpp  defs.h  defs.hpp  diagnostics.h  diagnostics.hpp  gkr.natvis  gkr_core.natvis  libmain.cpp  params.cpp  params.hpp  stack_alloc.h  stack_alloc.hpp  stamp.cpp  stamp.h  stamp.hpp  url.cpp  url.hpp
libs/gkr_core/gkr/capi/: api.h  defs.h  diagnostics.h  params.h  stack_alloc.h  stamp.h  url.h
libs/gkr_core/gkr/capi/net/: lib.h
libs/gkr_core/gkr/concurency/: events_waiting.h  events_waiting.hpp  os_events_waiting.cpp  os_events_waiting.hpp  waitable_event.cpp  waitable_event.hpp  waitable_lockfree_queue.h  waitable_lockfree_queue.hpp  waitable_object.cpp  waitable_object.hpp  waitable_objects.cpp  waitable_objects.h  waitable_semaphore.cpp  waitable_semaphore.hpp  worker_thread.cpp  worker_thread.h  worker_thread.hpp
libs/gkr_core/gkr/container/: lockfree_grow_only_bag.h  lockfree_grow_only_bag.hpp  lockfree_queue.h  lockfree_queue.hpp  raw_buffer.h  raw_buffer.hpp
libs/gkr_core/gkr/cpp/: lib_exchange_function.hpp  lib_is_swappable.h  lib_is_swappable.hpp
libs/gkr_core/gkr/misc/: c_allocator.hpp  fake_shared_mutex.hpp  ptr_sentry.hpp  sentry.hpp  stack_args_order.hpp
libs/gkr_core/gkr/net/: address.cpp  address.h  address.hpp  lib.cpp  lib.h  lib.hpp  socket.cpp  socket.h  socket.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_listener.cpp  tcp_listener.hpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
libs/gkr_core/gkr/sys/: file.cpp  file.hpp  path.cpp  path.hpp  process.cpp  process.hpp  process_name.cpp  process_name.h  rw_lock.cpp  rw_lock.hpp  thread.cpp  thread.hpp  thread_name.cpp
libs/gkr_core/tests/: CMakeLists.txt  t-address.cpp  t-params.cpp  t-raw_buffer.cpp  t-socket.cpp  t-sys_path.cpp  t-sys_thread.cpp  t-thread_worker.cpp  t-url.cpp  t-waitable_event.cpp  t-waitable_object.cpp  t-waitable_objects.cpp  t-waitable_semaphore.cpp  t-worker_thread.cpp
libs/gkr_inline/: CMakeLists.txt  README.md
libs/gkr_inline/gkr/: diagnostics.hpp  gkr_inline.natvis
libs/gkr_inline/gkr/capi/: diagnostics.h
libs/gkr_inline/gkr/container/: lockfree_bag.hpp  lockfree_grow_only_bag.hpp  lockfree_queue.hpp  lockfree_queue_ex.hpp  os_waitable_lockfree_queue.hpp  raw_buffer.hpp
libs/gkr_inline/gkr/cpp/: lib_is_swappable.hpp
libs/gkr_inline/tests/: t-lockfree_bag.cpp  t-lockfree_grow_only_bag.cpp  t-lockfree_queue.cpp  t-raw_buffer.cpp
libs/gkr_log/: CMakeLists.txt  README.md
libs/gkr_log/gkr/capi/log/: consumer.h  galery.h  log.h  logging.h
libs/gkr_log/gkr/capi/log/consumers/: android_log_consumer.h  app_console_consumer.h  dummy_consumer.h  udp_consumer.h  (+3 more)
libs/gkr_log/gkr/log/: api.h  c_consumer.cpp  c_consumer.hpp  c_consumer.hxx  callbacks.h  cconsumer.cpp  consumer.cpp  consumer.h  consumer.hpp  galery.cpp  galery.h  galery.hpp  ids.h  log.h  log.hpp  logger.cpp  logger.h  logger.hpp  logger.hxx  logging.cpp  logging.h  logging.hpp  message.h
libs/gkr_log/gkr/log/consumers/: androidLogConsumer.cpp  androidLogConsumer.h  android_log_callbacks.h  android_log_consumer.cpp  android_log_consumer.h  android_log_consumer.hpp  appConsoleConsumer.cpp  appConsoleConsumer.h  app_console_callbacks.h  app_console_consumer.cpp  app_console_consumer.h  app_console_consumer.hpp  dummy_consumer.cpp  dummy_consumer.h  dummy_consumer.hpp  text_file_callbacks.h  text_file_consumer.cpp  text_file_consumer.h  text_file_consumer.hpp  udpSocketConsumer.cpp  udpSocketConsumer.h  udp_consumer.cpp  udp_consumer.hpp  udp_socket_callbacks.h  udp_socket_consumer.cpp  udp_socket_consumer.h  udp_socket_consumer.hpp  windowsDebuggerConsumer.cpp  windowsDebuggerConsumer.h  windows_debugger_callbacks.h  windows_debugger_consumer.cpp  windows_debugger_consumer.h  windows_debugger_consumer.hpp
libs/gkr_log/gkr/log/defs/: generic.h  generic.hpp  generic_cdefs.hpp  generic_new.hpp  generic_new_basic.hpp  generic_new_extra.hpp  generic_old.hpp  generic_old_basic.hpp  generic_old_extra.hpp  plog.h
libs/gkr_log/gkr/log/formatters/: win32_format_message.h  win32_format_message.hpp
libs/gkr_log/tests/: CMakeLists.txt  t-log_consumer_text_file.cpp  t-log_defs_generic.cpp  t-log_defs_plog.cpp  t-log_fmt_output.cpp  t-log_generic_defs.cpp  t-logging.cpp  t-udp_consumer_receiver.cpp
libs/gkr_remote/: CMakeLists.txt
libs/gkr_remote/gkr/remote/: udpSocketReceiver.cpp  udpSocketReceiver.h
libs/gkr_testing/: CMakeLists.txt
libs/gkr_testing/gkr/testing/: allocator.h  allocator.hpp  diag_names.hpp  diag_undefs.h  diag_undefs.hpp  log_defs.h  log_defs.hpp  named_requirements.hpp  text_exception.hpp
tests/: CMakeLists.txt  main.c  main.cpp  t-address.cpp  t-diagnostic.cpp  t-events_waiting.cpp  t-lockfree_grow_only_bag.cpp  t-lockfree_queue.cpp  t-logging.cpp  t-raw_buffer.cpp  t-socket.cpp  t-thread_waiting.cpp  t-thread_worker.cpp  t-udp_socket_consumer_receiver.cpp  t-waitable_objects.cpp  test_lockfree_grow_only_bag.cpp  test_lockfree_queue.cpp  test_waiters.cpp
(+126 files in other folders)
